<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/search_view_back_ground"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:imeOptions="actionSearch"
        app:queryHint="Search..."
        android:lines="1"
        android:enabled="true"
        android:textSize="20sp"
        app:iconifiedByDefault="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_view">

                <RadioButton
                    android:id="@+id/allToDoBtn"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/all_btn_selector"
                    android:button="@null"
                    android:elevation="4dp"
                    android:checked="true"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/all"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/redBtnFilter"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/red_btn_selector"
                    android:button="@null"
                    android:elevation="4dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/red"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/purpleBtnFilter"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/purple_btn_selector"
                    android:button="@null"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/purple"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/orangeBtnFilter"
                    android:layout_width="100dp"
                    android:layout_height="40dp"                    android:textColor="@color/white"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/orange_btn_selector"
                    android:button="@null"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:text="@string/orange"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/blueBtnFilter"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/blue_btn_selector"
                    android:button="@null"
                    android:elevation="4dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/blue"
                    android:textStyle="bold" />

            </RadioGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/note_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="Add To Do"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/green"
        app:icon="@drawable/ic_add_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyToDo"
        android:layout_width="263dp"
        android:layout_height="335dp"
        android:layout_marginTop="140dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/you_re_all_done_for_today"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
